Uploaded image for project: 'Log4cxx'
  1. Log4cxx
  2. LOGCXX-237

Include missing headers

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • 0.10.0
    • 0.10.0
    • None
    • None
    • GCC 4.3 compiler

    Description

      fix some compiler errors with the soon-to-be-released GCC 4.3 due to missing includes.

      See "Header Dependency Cleanup" in http://gcc.gnu.org/gcc-4.3/porting_to.html

      Attachments

        1. log4cxx-includes.patch
          2 kB
          Jonathan Wakely

        Activity

          People

            carnold@apache.org Curt Arnold
            jwakely Jonathan Wakely
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: