LOGCXX-237: gcc 4.3 header dependency cleanup